# scripts

./: .gitignore  README.md  SECURITY.md  delete-accounts.js  get-certified.js  get-dup-emails.js  get-emails.js  get-invalid-emails.js  get-no-progress.js  get-open-data.js  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  techstack.md  techstack.yml
.github/: CODEOWNERS  dependabot.yml
accounts/: analyze-exams.js  analyze-surveys.js  get-duplicate--emails.js  get-duplicate--usernames.js  get-exams.js  get-surveys.js  package-lock.json  package.json  pnpm-lock.yaml  sample.env
chat/: package-lock.json  package.json  pnpm-lock.yaml  sample.env
chat-emails/: index.js  package.json  pnpm-lock.yaml
contributors/: .eslintrc.json  package.json  pnpm-lock.yaml  sample.env
crowdin/: package.json  pnpm-lock.yaml
database/: README.md  package-lock.json  package.json  pnpm-lock.yaml  sample.env
database/migrations/mikoyan/: Cargo.toml  README.md  current-schema.json
database/migrations/mikoyan/differ/: compare.js  index.js  package-lock.json  package.json
database/migrations/mikoyan/src/: clapper.rs  db.rs  error.rs  main.rs  normalize.rs  record.rs  user.rs
database/migrations/mikoyan/src/convert/: completed_challenge.rs  completed_exam.rs  exam_results.rs  file.rs  mod.rs  no_option.rs  partially_completed_challenge.rs  portfolio.rs  profile_ui.rs  saved_challenge.rs  user.rs
database/migrations/mikoyan/tests/: example.rs
database/prisma-migrate/: Cargo.toml  README.md
database/prisma-migrate/prisma/: v1-schema.prisma  v2-schema.prisma
database/prisma-migrate/src/: db.rs  main.rs
database/prisma-migrate/src/migrations/: mod.rs  v1.rs  v2.rs
db-migrations/: package.json
duplicates/: README.md  package-lock.json  package.json  pnpm-lock.yaml
emails/: README.md  get-emails.js  package-lock.json  package.json  sample.env
forum/: get-guide-article-content.js  headers.js  make-request.js  package-lock.json  package.json  pnpm-lock.yaml
ghost-to-markdown/: .env.sample  .gitignore  .prettierignore  README.md  package-lock.json  package.json  upload-to-hashnode.js
github/: index.js  package-lock.json  package.json  pnpm-lock.yaml  sample.env
honesty/: README.md  package-lock.json  package.json  pnpm-lock.yaml  sample.env
images/: package-lock.json  package.json  pnpm-lock.yaml
(+91 files in other folders)
