[package]
name = "mikoyan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
futures-util = "0.3.28"
mongodb = "2.5.0"
serde = "1.0.162"
serde_json = "1.0.96"
tokio = "1.28.0"
indicatif = "0.17.3"
