[package]
name = "mikoyan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.30"
mongodb = "2.8.2"
tokio = { version = "1.37.0", features = ["fs"] }
indicatif = "0.17.8"
serde = { version = "1.0.203", features = ["derive"] }
