[package]
name = "mikoyan"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cmp = "0.1.0"
indicatif = "0.17.8"
futures-util = "0.3.30"
mongodb = "2.8.2"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["fs"] }
